--- a/app/views/lesson_learns/edit.html.erb
+++ b/app/views/lesson_learns/edit.html.erb
@@ -1,18 +1,18 @@
-<div class="container w-50 d-flex justify-content-center">
+<div class="container w-75 d-flex justify-content-center">
   <%= turbo_frame_tag "modal" do %>
     <div class="modal-member z-3">
       <%= link_to "x", "#", class: "close_x square", data: {
         controller: "modals",
         action: "modals#close"
       } %>
-      <h1 class="fw-bold text-center mb-4"><%= t(".title") %></h1>
-      <%= render "form", url:  report_path(@report), remote: true %>
+      <h1 class="mb-3 text-center fw-bold"><%= t(".title").upcase %></h1>
+      <%= render "form", url:  lesson_learn_path(@lesson_learn), remote: true %>
       <div class="d-flex justify-content-center align-items-center mt-3">
-        <%= link_to t(".close"), "#", class: "btn btn-danger btn-md w-50", data: {
+        <%= link_to t(".close"), "#", class: "btn btn-danger btn-md w-50 ", data: {
           controller: "modals",
           action: "modals#close"
         } %>
       </div>
     </div>
   <% end %>
-<div>
+</div>
