Create statitics by group

--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -83,3 +83,8 @@
 .border-2 {
   border: #0a0a0b 2px;
 }
+
+.form-switch .form-check-input-primary:checked {
+  background-color: #0d6efd!important;
+  border-color: #0d6efd!important;
+}
