--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -117,6 +117,13 @@
             <%= link_to t(".list_value_resources"), value_resources_path, class: "nav-link fw-bold" %>
           </div>
         </li>
+
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url statistics_groups_path %>">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-bar-chart text-white me-1"></i>
+            <%= link_to t(".statistics_group"), statistics_groups_path, class: "nav-link fw-bold" %>
+          </div>
+        </li>
       </ul>
     </div>
   </nav>
