--- a/app/views/statistics_groups/_search.html.erb
+++ b/app/views/statistics_groups/_search.html.erb
@@ -1,16 +1,8 @@
-<%= form_with url: value_resources_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
+<%= form_with url: statistics_groups_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
   <div class="row mb-3">
-    <div class="col-auto">
-      <%= f.label :name,  t("project.form.name"), class: "form-label" %>
-      <%= f.text_field :name, value: params[:name], class: "form-control" %>
-    </div>
     <div class="col-auto">
       <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
       <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, {class: "form-select"} %>
-    </div>
-    <div class="col-auto">
-      <%= f.label :status, t("projects.search_form.status"), class: "form-label" %>
-      <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
     </div>
 
     <div class="col-auto">
@@ -25,25 +17,37 @@
                        value: month_field_value(params[:end_month_year]), class: "form-control" %>
     </div>
 
-    <div class="col-auto w-150px">
+    <div class="col-auto w-125px">
       <label class="form-label invisible">invisible</label>
-      <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
+      <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control w-100px" %>
     </div>
 
     <div class="col-auto w-100px">
       <label class="form-label invisible">invisible</label>
-      <%= link_to value_resources_path, class: "btn btn-secondary form-control" do %>
+      <%= link_to statistics_groups_path, class: "btn btn-secondary form-control" do %>
         <i class="bi bi-arrow-counterclockwise"></i>
       <% end %>
     </div>
   </div>
+
   <div class="row mb-3">
     <div class="col-auto">
       <div class="form-check form-switch">
         <%= f.label :each_month_separately, t("value_resources.search.each_month_separately"), class: "form-check-label text-decoration-none" %>
         <%= f.check_box :each_month_separately, {checked: boolean_params(:each_month_separately),
-                                                   class: "form-check-input w-50px mr-2",
-                                                   onclick: "this.form.submit()"} %>
+                                                 class: "form-check-input w-50px mr-2",
+                                                 onclick: "this.form.submit()"} %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-auto">
+      <div class="form-check form-switch">
+        <%= f.label :average_month, t(".average_month"), class: "form-check-label text-decoration-none" %>
+        <%= f.check_box :average_month, {checked: boolean_params(:average_month),
+                                                 class: "form-check-input w-50px mr-2 form-check-input-primary",
+                                                 onclick: "this.form.submit()"} %>
       </div>
     </div>
   </div>
