--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -52,6 +52,13 @@
           </div>
         </li>
 
+        <li class="nav-item offset-1 mb-2 menu-item pd <%= active_class_for_url statistics_values_path %>">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-bar-chart text-white me-1"></i>
+            <%= link_to t(".statistics_values"), statistics_values_path, class: "nav-link fw-bold" %>
+          </div>
+        </li>
+
         <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(release_plans_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-calendar text-white me-1"></i>
