--- a/app/views/value_resources/index.html.erb
+++ b/app/views/value_resources/index.html.erb
@@ -64,8 +64,8 @@
         </div>
       </div>
       <%= form_with url: value_resources_path, method: :get, class: "mb-2" do |f| %>
-        <div class="form-check form-switch mx-3 mb-3">
-          <%= f.label :each_month_separately, t(".each_month_separately"), class: "form-check-label text-decoration-none" %>
+        <div class="form-check form-switch mx-3 m-3">
+          <%= f.label :each_month_separately, t("value_resources.search.each_month_separately"), class: "form-check-label text-decoration-none" %>
           <%= f.check_box :each_month_separately, {checked: boolean_params(:each_month_separately),
                                                   class: "form-check-input w-50px mr-2",
                                                   onclick: "this.form.submit()"} %>
