--- a/app/views/project_features/show.html.erb
+++ b/app/views/project_features/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center mb-8 fw-bold"><%= t "month_project_features.index.list_value" %></h1>
+  <h1 class="text-center mb-8 fw-bold text-uppercase"><%= t "month_project_features.index.list_value" %></h1>
 
   <ul class="list-group">
     <%= render @project_features %>
