--- a/app/views/statistics_values/_search.html.erb
+++ b/app/views/statistics_values/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: statistics_values_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
-  <div class="row mt-4">
+  <div class="row mb-3">
     <div class="col-auto">
       <%= f.label :project_id,  t("project.form.name"), class: "form-label" %>
       <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, {class: "form-select"} %>
@@ -35,6 +35,16 @@
       <%= link_to statistics_values_path, class: "btn btn-secondary form-control" do %>
         <i class="bi bi-arrow-counterclockwise"></i>
       <% end %>
+    </div>
+  </div>
+  <div class="row mb-3">
+    <div class="col-auto">
+      <div class="form-check form-switch">
+        <%= f.label :each_month_separately, t("value_resources.search.each_month_separately"), class: "form-check-label text-decoration-none" %>
+        <%= f.check_box :each_month_separately, {checked: boolean_params(:each_month_separately),
+                                                   class: "form-check-input w-50px mr-2",
+                                                   onclick: "this.form.submit()"} %>
+      </div>
     </div>
   </div>
 <% end %>
