--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -3,10 +3,10 @@
   z-index: 1;
   padding: 2em;
   width: 50%;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  max-height: calc(100% - 100px);
+  left: 30%;
+  right: 20%;
+  max-height: 80%;
+  bottom: 10%;
   overflow-y: auto;
   background-color: white;
   border-radius: 5px;
