--- a/app/views/lesson_learns/_form.html.erb
+++ b/app/views/lesson_learns/_form.html.erb
@@ -9,8 +9,8 @@
 
     <div class="form-group col-md-5">
       <label for="lesson_project_id" class="form-label"><%= t ".choose_project" %></label>
-      <%= f.collection_select :project_id, @projects, :id, :name, {include_blank: true},
-                              {class: "form-select #{invalid @lesson_learn, :project_id}"} %>
+      <%= f.collection_select :project_id, @projects, :id, :name, { include_blank: true },
+                              { class: "form-select #{invalid @lesson_learn, :project_id}" } %>
       <p class="error"><%= show_errors @lesson_learn, :project_id %></p>
     </div>
   </div>
@@ -47,7 +47,18 @@
     <p class="error"><%= show_errors @lesson_learn, :reference_link %></p>
   </div>
 
-  <div class="d-flex justify-content-center">
-    <%= f.submit t(".save"), class: "btn btn-primary btn-block btn-md w-50 mt-3 form-control" %>
-  </div>
+  <% if action_name == "edit" %>
+    <div class="mb-3 d-flex justify-content">
+      <%= f.submit t(".save"), class: "btn btn-primary form-control me-2" %>
+        <%= link_to t("lesson_learns.show.close"), "#", class: "btn btn-danger form-control", data: {
+          controller: "modals",
+          action: "modals#close"
+        } %>
+    </div>
+  <% else %>
+    <div class="d-flex justify-content-center">
+      <%= f.submit t(".save"), class: "btn btn-primary btn-block btn-md w-50 mt-3 form-control" %>
+    </div>
+  <% end %>
+
 <% end %>
