--- a/app/views/lesson_learns/_search.html.erb
+++ b/app/views/lesson_learns/_search.html.erb
@@ -5,13 +5,13 @@
   </div>
 
   <div class="col-auto">
-    <%= f.label :start_date, t("project.form.start_date"), class: "form-label" %>
-    <%= f.date_field :start_date, value: date_field_value(params[:start_date]), class: "form-control" %>
+    <%= f.label :start_date, t(".start_date"), class: "form-label" %>
+    <%= f.date_field :start_date, value: params[:start_date], class: "form-control" %>
   </div>
 
   <div class="col-auto">
-    <%= f.label :end_date, t("project.form.end_date"), class: "form-label" %>
-    <%= f.date_field :end_date, value: date_field_value(params[:end_date]), class: "form-control" %>
+    <%= f.label :end_date, t(".end_date"), class: "form-label" %>
+    <%= f.date_field :end_date, value: params[:end_date], class: "form-control" %>
   </div>
 
   <div class="col-auto">
