--- a/app/views/project_features/index.html.erb
+++ b/app/views/project_features/index.html.erb
@@ -4,12 +4,16 @@
 <% end %>
 <%= form_with url: project_features_path, method: :get, class: "row g-4 pb-4" do |f| %>
   <div class="col-auto">
-    <label class="form-label"><%= t ".select_month_year" %></label>
-    <%= f.date_field :month_year, type: "month", value: month_field_value(params[:month_year]), class: "form-control" %>
-  </div>
-  <div class="col-auto">
     <%= f.label :name, t(".name"), class: "form-label" %>
     <%= f.text_field :name, value: params[:name], class: "form-control" %>
+  </div>
+  <div class="col-auto">
+    <label class="form-label"><%= t ".from_month" %></label>
+    <%= f.date_field :from_month_year, type: "month", value: params[:from_month_year], class: "form-control" %>
+  </div>
+  <div class="col-auto">
+    <label class="form-label"><%= t ".to_month" %></label>
+    <%= f.date_field :to_month_year, type: "month", value: params[:to_month_year], class: "form-control" %>
   </div>
   <div class="col-auto w-140px">
     <label class="form-label invisible">invisible label</label>
@@ -26,13 +30,13 @@
   <div class="card border-0 flex-fill w-100">
     <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
       <thead>
-        <tr>
-          <th scope="col" width="5%"><%= t ".stt" %></th>
-          <th scope="col"><%= t ".name" %></th>
-          <th scope="col"><%= t ".man_month" %></th>
-          <th scope="col"><%= t ".month_year" %></th>
-          <th scope="col" width="10%"><%= t ".action" %></th>
-        </tr>
+      <tr>
+        <th scope="col" width="5%"><%= t ".stt" %></th>
+        <th scope="col"><%= t ".name" %></th>
+        <th scope="col"><%= t ".man_month" %></th>
+        <th scope="col"><%= t ".month_year" %></th>
+        <th scope="col" width="10%"><%= t ".action" %></th>
+      </tr>
       </thead>
       <div class="card-header border-0 card-header-space-between">
         <h2 class="card-header-title h4 text-uppercase fw-bold"><%= t ".title" %></h2>
@@ -42,22 +46,23 @@
         <!-- Dropdown -->
         <div class="dropdown ms-4">
           <a href="javascript: void(0);" class="dropdown-toggle no-arrow text-secondary" role="button"
-            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="bi bi-three-dots-vertical"></i>
           </a>
           <div class="dropdown-menu">
             <%= link_to t(".export"),
-              project_features_path(format: :xlsx,
-                                    month_year: params[:month_year],
-                                    name: params[:name]),
-                                    class: "dropdown-item" %>
+                        project_features_path(format: :xlsx,
+                                              from_month_year: params[:from_month_year],
+                                              to_month_year: params[:to_month_year],
+                                              name: params[:name]),
+                        class: "dropdown-item" %>
           </div>
         </div>
       </div>
       <tbody>
-        <%= render partial: "project_features/monthly_project_feature",
-                collection: @project,
-                as: "item" %>
+      <%= render partial: "project_features/monthly_project_feature",
+                 collection: @project,
+                 as: "item" %>
       </tbody>
     </table>
   </div>
