--- a/app/views/resources/_project.html.erb
+++ b/app/views/resources/_project.html.erb
@@ -1,9 +1,9 @@
 <tr class="table_row hide">
-  <td><%= project.id %></td>
-  <td><%= @month %></td>
-  <td><%= @year %></td>
-  <td><span><%= project.name %></span></td>
-  <td><%= project.calculate_project_resource_man_per_month params[:month_year] %></td>
-  <td><%= link_to t("resources.table.detail"), resource_path(project, month: @month, year: @year), data: { turbo_frame: "modal" } %></td>
+  <td><%= sequence_number project_counter, @pagy&.offset  %></td>
+  <td><%= project.month %></td>
+  <td><%= project.year %></td>
+  <td><%= project.name %></td>
+  <td><%= project.calculate_project_resource_man_per_month project.month, project.year %></td>
+  <td><%= link_to t("resources.table.detail"), resource_path(project, month: project.month, year: project.year), data: { turbo_frame: "modal" } %></td>
   <td><%= format_date project.start_date %></td>
 </tr>
