--- a/app/views/resources/_search.html.erb
+++ b/app/views/resources/_search.html.erb
@@ -1,18 +1,24 @@
 <%= form_with url: resources_path, method: :get, class: "row g-4 pb-4" do |f| %>
-  <div class="col-auto w-193px">
-    <%= f.label :date,  t("resources.index.date_resource"), class: "form-label" %>
-    <%= f.date_field :month_year, type: "month", value: month_field_value(params[:month_year]), class: "form-control" %>
-  </div>
+    <div class="col-auto w-193px">
+      <%= f.label :name,  t("resources.index.name"), class: "form-label" %>
+      <%= f.text_field :name, value: params[:name], placeholder: t("resources.index.search_by_name"), class: "form-control"%>
+    </div>
 
-  <div class="col-auto">
-    <%= f.label :name,  t("resources.index.name"), class: "form-label" %>
-    <%= f.text_field :name, value: params[:name], placeholder: t("resources.index.search_by_name"), class: "form-control"%>
-  </div>
+    <div class="col-auto">
+      <%= f.label :date,  t("project_features.index.from_month"), class: "form-label" %>
+      <%= f.date_field :from_month_year, type: "month", value: params[:from_month_year], class: "form-control" %>
+    </div>
 
-  <div class="col-auto w-140px">
-    <label class="form-label invisible">invisible label</label>
-    <%= f.submit t("resources.index.search"), name: nil, class: "btn btn-primary form-control" %>
-  </div>
+    <div class="col-auto">
+      <%= f.label :date,  t("project_features.index.to_month"), class: "form-label" %>
+      <%= f.date_field :to_month_year, type: "month", value: params[:to_month_year], class: "form-control" %>
+    </div>
+
+
+    <div class="col-auto w-140px">
+      <label class="form-label invisible">invisible label</label>
+      <%= f.submit t("resources.index.search"), name: nil, class: "btn btn-primary form-control" %>
+    </div>
 
   <div class="col-auto w-90px m-0">
     <label class="form-label invisible">invisible label</label>
