--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -4,7 +4,7 @@
   <%= javascript_include_tag "animate" %>
 <% end %>
 
-<%= render("resources/search") %>
+<%= render "search" %>
 <div class="row">
   <div class="col">
     <!-- Card -->
@@ -21,11 +21,14 @@
             <i class="bi bi-three-dots-vertical"></i>
           </a>
           <div class="dropdown-menu">
-            <%= link_to t(".export"), resources_path(format: :xlsx, name: params[:name], month_year: params[:month_year]), class: "dropdown-item" %>
+            <%= link_to t(".export"), resources_path(format: :xlsx, name: params[:name],
+                                                     from_month_year: params[:from_month_year],
+                                                     to_month_year: params[:to_month_year]),
+                        class: "dropdown-item" %>
           </div>
         </div>
       </div>
-      <%= render("resources/table") %>
+      <%= render "table" %>
     </div>
     <div class="card-footer">
       <div class="d-flex justify-content-between align-items-center">
