--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13877,6 +13877,10 @@ label {
   width: 125px!important
 }
 
+.w-140px {
+  width: 140px!important
+}
+
 .w-150px {
   width: 150px!important
 }
@@ -13885,6 +13889,9 @@ label {
   width: 175px!important
 }
 
+.w-193px {
+  width: 193px!important
+}
 .w-200px {
   width: 200px!important
 }
@@ -15225,6 +15232,10 @@ label {
   margin-bottom: .46875rem!important
 }
 
+.mb-25 {
+  margin-bottom: .5859375rem!important
+}
+
 .mb-3 {
   margin-bottom: .624999375rem!important
 }
@@ -16000,7 +16011,9 @@ label {
 }
 
 .fs-4 {
-  font-size: .875rem!important
+  font-size: .875rem!important;
+  line-height: .875rem!important;
+  padding: .875rem!important
 }
 
 .fs-5 {
@@ -38832,4 +38845,8 @@ li.pd {
 
 .hide {
   opacity: 0;
+}
+
+.br {
+  border-radius: 30% !important;
 }
