--- a/app/views/statistics_groups/_search.html.erb
+++ b/app/views/statistics_groups/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: statistics_groups_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
+<%= form_with url: statistics_groups_path, method: :get, class: "row g-4 position-relative" do |f| %>
   <div class="row mb-3">
     <div class="col-auto">
       <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
@@ -17,12 +17,12 @@
                        value: month_field_value(params[:end_month_year]), class: "form-control" %>
     </div>
 
-    <div class="col-auto w-125px">
+    <div class="col-auto w-140px">
       <label class="form-label invisible">invisible</label>
-      <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control w-100px" %>
+      <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
     </div>
 
-    <div class="col-auto w-100px">
+    <div class="col-auto w-90px">
       <label class="form-label invisible">invisible</label>
       <%= link_to statistics_groups_path, class: "btn btn-secondary form-control" do %>
         <i class="bi bi-arrow-counterclockwise"></i>
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="row mb-3">
+  <div class="row mb-25">
     <div class="col-auto mr-2">
       <div class="form-check form-switch">
         <%= f.label :each_month_separately, t("value_resources.search.each_month_separately"), class: "form-check-label text-decoration-none" %>
