--- a/app/views/value_resources/_search.html.erb
+++ b/app/views/value_resources/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: value_resources_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
+<%= form_with url: value_resources_path, method: :get, class: "row g-4 position-relative" do |f| %>
   <div class="row mb-3">
     <div class="col-auto">
       <%= f.label :name,  t("project.form.name"), class: "form-label" %>
@@ -13,31 +13,32 @@
       <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
     </div>
 
-    <div class="col-auto">
+    <div class="col-auto w-193px">
       <%= f.label :start_month_year, t("dashboard.search.start_month"), class: "form-label" %>
       <%= f.date_field :start_month_year, type: "month",
                        value: start_month_field_value(params[:start_month_year]), class: "form-control" %>
     </div>
 
-    <div class="col-auto">
+    <div class="col-auto w-193px">
       <%= f.label :end_month_year, t("dashboard.search.end_month"), class: "form-label" %>
       <%= f.date_field :end_month_year, type: "month",
                        value: month_field_value(params[:end_month_year]), class: "form-control" %>
     </div>
 
-    <div class="col-auto w-150px">
+    <div class="col-auto w-140px">
       <label class="form-label invisible">invisible</label>
       <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
     </div>
 
-    <div class="col-auto w-100px">
+    <div class="col-auto w-90px">
       <label class="form-label invisible">invisible</label>
       <%= link_to value_resources_path, class: "btn btn-secondary form-control" do %>
         <i class="bi bi-arrow-counterclockwise"></i>
       <% end %>
     </div>
   </div>
-  <div class="row mb-3">
+
+  <div class="row mb-25">
     <div class="col-auto mr-2">
       <div class="form-check form-switch">
         <%= f.label :each_month_separately, t("value_resources.search.each_month_separately"), class: "form-check-label text-decoration-none" %>
