--- a/app/views/projects/_project_member.html.erb
+++ b/app/views/projects/_project_member.html.erb
@@ -13,6 +13,7 @@
         <th width="5%"><%= t ".stt" %></th>
         <th><%= t ".Member_name" %></th>
         <th><%= t ".Role" %></th>
+        <th><%= t ".group"%></th>
         <th><%= t ".Github_Account" %></th>
         <th><%= t ".joined_at" %></th>
         <th><%= t ".left_at" %></th>
