--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -1,9 +1,8 @@
 <%= turbo_frame_tag "modal" do %>
   <div class="modal-member" style="min-height: 70%">
-    <%= link_to "x", "#", class: "close_x square", data: {
-      controller: "modals",
-      action: "modals#close"
-    } %>
+    <%= link_to "#", class: "close_x square", data: {controller: "modals", action: "modals#close"} do %>
+      <span>X</span>
+    <% end %>
     <div class="d-flex align-items-center text-uppercase">
       <h1 class="modal-header mb-3 w-100 justify-content-center fw-bold"><%= t(".title") %></h1>
     </div>
@@ -33,4 +32,5 @@
         </div>
       </div>
     </div>
+  </div>
 <% end %>
