--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -62,6 +62,15 @@
   font-weight: bolder;
 }
 
+.close_x span{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-weight: bolder;
+}
+
 .close_x:hover {
   cursor: pointer;
   color: white;
