--- a/app/views/dashboard_resources/_search.html.erb
+++ b/app/views/dashboard_resources/_search.html.erb
@@ -1,38 +1,41 @@
 <%= form_with url: dashboard_resources_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
-  <div class="col-auto">
-    <%= f.label :project_id,  t("project.form.name"), class: "form-label" %>
-    <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, {class: "form-select"} %>
-  </div>
-  <div class="col-auto">
-    <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
-    <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, {class: "form-select"} %>
-  </div>
-  <div class="col-auto">
-    <%= f.label :status, t("projects.search_form.status"), class: "form-label" %>
-    <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
-  </div>
+  <div class="row mb-3 justify-content-between w-75">
+    <div class="col-auto" data-controller="select2">
+      <%= f.label :project_id,  t("project.form.name"), class: "form-label" %>
+      <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, {class: "form-select select2"} %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
+      <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, {class: "form-select"} %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :status, t("projects.search_form.status"), class: "form-label" %>
+      <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
+    </div>
 
-  <div class="col-auto">
-    <%= f.label :start_month_year, t("dashboard.search.start_month"), class: "form-label" %>
-    <%= f.date_field :start_month_year, type: "month",
-                     value: start_month_field_value(params[:start_month_year]), class: "form-control" %>
-  </div>
+    <div class="col-auto">
+      <%= f.label :start_month_year, t("dashboard.search.start_month"), class: "form-label" %>
+      <%= f.date_field :start_month_year, type: "month",
+                       value: start_month_field_value(params[:start_month_year]), class: "form-control" %>
+    </div>
 
-  <div class="col-auto">
-    <%= f.label :end_month_year, t("dashboard.search.end_month"), class: "form-label" %>
-    <%= f.date_field :end_month_year, type: "month",
-                     value: month_field_value(params[:end_month_year]), class: "form-control" %>
+    <div class="col-auto">
+      <%= f.label :end_month_year, t("dashboard.search.end_month"), class: "form-label" %>
+      <%= f.date_field :end_month_year, type: "month",
+                       value: month_field_value(params[:end_month_year]), class: "form-control" %>
+    </div>
   </div>
+  <div class="row mb-3 justify-content-end w-75">
+    <div class="col-auto w-125px">
+      <label class="form-label invisible">invisible</label>
+      <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
+    </div>
 
-  <div class="col-auto w-125px">
-    <label class="form-label invisible">invisible</label>
-    <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
-  </div>
-
-  <div class="col-auto w-90px">
-    <label class="form-label invisible">invisible</label>
-    <%= link_to dashboard_resources_path, class: "btn btn-secondary form-control" do %>
-      <i class="bi bi-arrow-counterclockwise"></i>
-    <% end %>
+    <div class="col-auto w-90px">
+      <label class="form-label invisible">invisible</label>
+      <%= link_to dashboard_resources_path, class: "btn btn-secondary form-control" do %>
+        <i class="bi bi-arrow-counterclockwise"></i>
+      <% end %>
+    </div>
   </div>
 <% end %>
