--- a/app/views/dashboard_values/_search.html.erb
+++ b/app/views/dashboard_values/_search.html.erb
@@ -1,50 +1,51 @@
 <%= form_with url: dashboard_values_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
-  <div class="col-auto">
-    <%= f.label :project_id,  t("project.form.name"), class: "form-label" %>
-    <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, {class: "form-select"} %>
+  <div class="row mb-5 justify-content-between w-75">
+    <div class="col-auto" data-controller="select2">
+      <%= f.label :project_id,  t("project.form.name"), class: "form-label" %>
+      <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, {class: "form-select select2"} %>
+    </div>
+
+    <div class="col-auto">
+      <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
+      <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, {class: "form-select"} %>
+    </div>
+
+    <div class="col-auto">
+      <%= f.label :status, t("projects.search_form.status"), class: "form-label" %>
+      <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
+    </div>
+
+    <div class="col-auto w-193px">
+      <%= f.label :start_month_year, t("dashboard.search.start_month"), class: "form-label" %>
+      <%= f.date_field :start_month_year, type: "month",
+                       value: start_month_field_value(params[:start_month_year]), class: "form-control" %>
+    </div>
+
+    <div class="col-auto w-193px">
+      <%= f.label :end_month_year, t("dashboard.search.end_month"), class: "form-label" %>
+      <%= f.date_field :end_month_year, type: "month",
+                       value: month_field_value(params[:end_month_year]), class: "form-control" %>
+    </div>
   </div>
 
-  <div class="col-auto">
-    <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
-    <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, {class: "form-select"} %>
-  </div>
-
-  <div class="col-auto">
-    <%= f.label :status, t("projects.search_form.status"), class: "form-label" %>
-    <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
-  </div>
-
-  <div class="col-auto w-193px">
-    <%= f.label :start_month_year, t("dashboard.search.start_month"), class: "form-label" %>
-    <%= f.date_field :start_month_year, type: "month",
-                     value: start_month_field_value(params[:start_month_year]), class: "form-control" %>
-  </div>
-
-  <div class="col-auto w-193px">
-    <%= f.label :end_month_year, t("dashboard.search.end_month"), class: "form-label" %>
-    <%= f.date_field :end_month_year, type: "month",
-                     value: month_field_value(params[:end_month_year]), class: "form-control" %>
-  </div>
-
-  <div class="col-auto w-125px">
-    <label class="form-label invisible">invisible</label>
-    <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
-  </div>
-
-  <div class="col-auto w-90px">
-    <label class="form-label invisible">invisible</label>
-    <%= link_to dashboard_values_path, class: "btn btn-secondary form-control" do %>
-      <i class="bi bi-arrow-counterclockwise"></i>
-    <% end %>
-  </div>
-
-  <div class="row mb-2 mt-4">
+  <div class="row mb-3 justify-content-between align-items-center w-75">
     <div class="col-auto">
       <div class="form-check form-switch">
         <%= f.label :each_month_separately, t("value_resources.search.each_month_separately"), class: "form-check-label text-decoration-none" %>
         <%= f.check_box :each_month_separately, {checked: boolean_params(:each_month_separately),
                                                    class: "form-check-input w-50px mr-2",
                                                    onclick: "this.form.submit()"} %>
+      </div>
+    </div>
+    <div class="col-auto d-flex flex-row align-items-center">
+      <div class="w-125px">
+        <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
+      </div>
+
+      <div class="w-90px ml-35">
+        <%= link_to dashboard_values_path, class: "btn btn-secondary form-control" do %>
+          <i class="bi bi-arrow-counterclockwise"></i>
+        <% end %>
       </div>
     </div>
   </div>
