--- a/app/views/projects/_search_form.html.erb
+++ b/app/views/projects/_search_form.html.erb
@@ -1,32 +1,36 @@
 <%= form_with url: projects_path, method: :get, class: "row g-4 pb-4" do |f| %>
-  <div class="col-auto">
-    <%= f.label :start_date,  t(".start_date"), class: "form-label" %>
-    <%= f.date_field :start_date, value: params[:start_date], class: "form-control" %>
+  <div class="row mb-3 justify-content-between w-75">
+    <div class="col-auto">
+      <%= f.label :name,  t(".name"), class: "form-label" %>
+      <%= f.text_field :name, value: params[:name], class: "form-control" %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :group_id, t(".group"), class: "form-label" %>
+      <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, class: "form-select" %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :status, t(".status"), class: "form-label" %>
+      <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, class: "form-select" %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :start_date,  t(".start_date"), class: "form-label" %>
+      <%= f.date_field :start_date, value: params[:start_date], class: "form-control" %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :end_date,  t(".end_date"), class: "form-label" %>
+      <%= f.date_field :end_date, value: params[:end_date], class: "form-control" %>
+    </div>
   </div>
-  <div class="col-auto">
-    <%= f.label :end_date,  t(".end_date"), class: "form-label" %>
-    <%= f.date_field :end_date, value: params[:end_date], class: "form-control" %>
-  </div>
-  <div class="col-auto">
-    <%= f.label :name,  t(".name"), class: "form-label" %>
-    <%= f.text_field :name, value: params[:name], class: "form-control" %>
-  </div>
-  <div class="col-auto">
-    <%= f.label :group_id, t(".group"), class: "form-label" %>
-    <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, class: "form-select" %>
-  </div>
-  <div class="col-auto">
-    <%= f.label :status, t(".status"), class: "form-label" %>
-    <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, class: "form-select" %>
-  </div>
-  <div class="col-auto w-140px">
-    <label class="form-label invisible">invisible label</label>
-    <%= f.submit t(".search"), name: nil, class: "btn btn-primary form-control" %>
-  </div>
-  <div class="col-auto w-90px m-0">
-    <label class="form-label invisible">invisible label</label>
-    <%= link_to projects_path, class: "btn btn-secondary form-control" do %>
-      <i class="bi bi-arrow-counterclockwise"></i>
-    <% end %>
+  <div class="row mb-3 justify-content-end w-75">
+    <div class="col-auto w-140px">
+      <label class="form-label invisible">invisible</label>
+      <%= f.submit t(".search"), name: nil, class: "btn btn-primary form-control" %>
+    </div>
+    <div class="col-auto w-90px m-0">
+      <label class="form-label invisible">invisible</label>
+      <%= link_to projects_path, class: "btn btn-secondary form-control" do %>
+        <i class="bi bi-arrow-counterclockwise"></i>
+      <% end %>
+    </div>
   </div>
 <% end %>
