--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -1,10 +1,9 @@
 <div class="container w-50 d-flex justify-content-center">
   <%= turbo_frame_tag "modal" do %>
     <div class="modal-member z-3">
-      <%= link_to "x", "#", class: "close_x square", data: {
-        controller: "modals",
-        action: "modals#close"
-      } %>
+      <%= link_to "#", class: "close_x square", data: {controller: "modals", action: "modals#close"} do %>
+        <span>X</span>
+      <% end %>
       <h1 class="fw-bold text-center mb-4"><%= t(".title") %></h1>
       <%= render "form", url:  report_path(@report), remote: true %>
       <div class="d-flex justify-content-center align-items-center mt-3">
@@ -15,4 +14,4 @@
       </div>
     </div>
   <% end %>
-<div>
+</div>
